--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,7 +1,4 @@
-<h1> Heroes </h1>
-<hr>
-
-<h2> My Heroes </h2>
+<h2> Your Heroes: </h2>
 <div>
     <button mat-raised-button color="primary" (click)="generateNewHero()">Generate New Hero</button>
 </div>
@@ -10,7 +7,7 @@
 </div>
 <hr>
 
-<h2> Other Trainers' Heroes </h2>
+<h2> Other Trainers' Heroes: </h2>
 <div style="display: flex; flex-wrap: wrap;">
     <app-hero-card></app-hero-card>
     <app-hero-card></app-hero-card>
