--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h2>Hello {{config.api.loggedInUser || "trainer"}}!</h2>
-<hr>
+<h2>Hello {{config.loggedInUser || "trainer"}}!
+  <button mat-button *ngIf="config.loggedInUser" (click)="logout()">
+    Logout
+  </button>
+  <mat-divider></mat-divider>
+</h2>
+
 <router-outlet></router-outlet>
